:bug: fix(table): overflow: scroll => auto

--- a/styles/table.styl
+++ b/styles/table.styl
@@ -2,7 +2,7 @@
 @import './var.styl'
 
 .u-table
-	overflow: scroll
+	overflow: auto
 	&-td
 		&:first-child
 			border-left-width:  0px
